# MedicalAssistant

./: Dockerfile.bot  Dockerfile.celery  README.md  client_manipulator.py  docker-compose.yml  main.py  pyproject.toml  tasks.py
src/bot/: locale.json  main.py
src/celery/: tasks.py
